fix: fix on mobile device

--- a/assets/scss/section/_section__chapter1-uk-2.scss
+++ b/assets/scss/section/_section__chapter1-uk-2.scss
@@ -45,7 +45,10 @@
     display: flex;
     flex-direction: column;
     img {
-      flex: 1;
+      flex-basis: 50%;
+      width: px-to-vw(480);
+      aspect-ratio: 480/510;
+      display: block;
     }
     .white-box {
       right: 60%;
@@ -57,7 +60,10 @@
     flex-direction: column;
     flex-basis: $first-three;
     img {
-      flex: 1;
+      flex-basis: 50%;
+      width: px-to-vw(480);
+      aspect-ratio: 480/510;
+      display: block;
     }
     .white-box {
       left: 50%;
@@ -70,7 +76,10 @@
     flex-direction: column;
     flex-basis: $first-three;
     img {
-      flex: 1;
+      flex-basis: 50%;
+      width: px-to-vw(480);
+      aspect-ratio: 480/510;
+      display: block;
     }
     .white-box {
       left: 60%;
